[package]
authors = ["gazatu"]
description = ""
edition = "2021"
license = ""
name = "radioclient"
repository = ""
rust-version = "1.75"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta.16", features = ["codegen"] }

[dependencies]
hex = "0.4.3"
md-5 = "0.10.6"
pwhash = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0-beta.20", features = ["protocol-asset"] }
tauri-plugin-app = "2.0.0-alpha.2"
tauri-plugin-cors-fetch = "2.1.1"
tauri-plugin-os = "2.0.0-beta.4"
tauri-plugin-shell = "2.0.0-beta.5"
tauri-plugin-websocket = "2.0.0-beta.5"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "radioclientlib"

[patch.crates-io]
tauri-plugin-cors-fetch = { path = "../../tauri-plugin-cors-fetch" }
