[package]
authors = ["gazatu"]
description = ""
edition = "2021"
license = ""
name = "radioclient"
repository = ""
rust-version = "1.83"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.1.0", features = ["codegen"] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.4.0", features = ["protocol-asset"] }
tauri-plugin-blec = "0.5.3"
tauri-plugin-fs = "2.4.2"
tauri-plugin-geolocation = "2.2.4"
tauri-plugin-notification = "2.3.1"
tauri-plugin-os = "2.2.1"
tauri-plugin-shell = "2.2.0"
tokio = "1.44.1"
uuid = "1.16.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "radioclientlib"
